# AREFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  are_sim.sh  client_10_17_19_47_59_831931.out  client_10_29_14_18_54_631956.out  client_11_10_11_56_21_412750.out  mpi_setup_and_run.sh  multiple_run.sh  nohup.out  sim_0_10_17_19_47_59_814219.out  sim_0_10_29_14_18_54_623510.out  sim_0_11_10_11_56_21_410894.out  sim_1_10_17_19_47_59_817628.out  sim_1_10_29_14_18_54_625293.out  sim_1_11_10_11_56_21_411517.out  sim_2_10_17_19_47_59_820777.out  sim_2_10_29_14_18_54_627690.out  sim_2_11_10_11_56_21_411974.out  sim_3_10_17_19_47_59_825194.out  sim_3_10_29_14_18_54_629989.out  sim_3_10_29_16_08_27_694041.out  sim_3_11_10_11_56_21_412360.out  sim_4_10_17_19_47_59_828300.out
EAFramework/: CMakeLists.txt
EAFramework/src/: CPPNGenome.cpp  EA.cpp  Genome.cpp  Individual.cpp  Logging.cpp  NN2CPPNGenome.cpp  NNParamGenome.cpp  Novelty.cpp  ProtomatrixGenome.cpp  Settings.cpp  crossbreeding.cpp  genetic_operators.cpp  io_helpers.cpp  population.cpp  protomatrix_utils.cpp  quadrics.cpp  sq_cppn_genome.cpp
EAFramework/tools/: nn2_cppn_serial_to_dot.cpp
EvolutionVREP/: .gitignore  CMakeLists.txt  Doxyfile  README.md  RandNum.cpp  RandNum.h  exp_plugin_loader.hpp  makefile  v_repExtER.VC.VC.opendb  v_repExtER.cpp  v_repExtER.h  v_repExtER.sln
EvolutionVREP/Cluster/: client_05_20_17_34_12_503437.out  robustness_test.py  run_cluster.py  sim_0_05_20_17_34_12_497000.out  sim_1_05_20_17_34_12_499182.out  sim_2_05_20_17_34_12_501271.out
EvolutionVREP/ERClient/: CMakeLists.txt  ClientEA.cpp  ClientEA.h  ERClient.cpp  ERClient.pro  ERClient.vcxproj  Readme.md  makefile  makefile - Copy  makefilebackup  settings0.csv
EvolutionVREP/ERFiles/: DefaultGenome.cpp  DefaultGenome.h  DefaultGenomeVREP.cpp  DefaultGenomeVREP.h  EA.cpp  EA.h  EA_Dynamic.cpp  EA_Dynamic.h  EA_Factory.cpp  EA_Factory.h  EA_Generational.cpp  EA_Generational.h  EA_MultiNEAT.cpp  EA_MultiNEAT.h  EA_MultiNEATGenome.cpp  EA_MultiNEATGenome.h  EA_NEAT.cpp  EA_NEAT.h  EA_SteadyState.cpp  EA_SteadyState.h  EA_VREP.cpp  EA_VREP.h  ENN.h  ER.cpp  ER.h  ER_VREP.cpp  ER_VREP.h  Genome.cpp  Genome.h  GenomeFactory.cpp  GenomeFactory.h  GenomeFactoryVREP.cpp  GenomeFactoryVREP.h  Settings.cpp  Settings.h  SettingsERClient.cpp  SettingsERClient.h  VREPFunctions.cpp  VREPFunctions.h
EvolutionVREP/MPI/: mpi_are.c
EvolutionVREP/NEAT_LIB/: NEAT_LIB.sln
EvolutionVREP/SUPERHACK/: README.txt  SavedGenerations200.csv  settings200.csv
EvolutionVREP/VREP_Files/: CMakeLists.txt  C_Sensor.ttm  C_Servo.ttm  C_Wheel.ttm  catModel.ttm
EvolutionVREP/examples/: CMakeLists.txt
EvolutionVREP/experiments/: CMakeLists.txt  README.md
EvolutionVREP/image_processing/: CMakeLists.txt
EvolutionVREP/modules/: CMakeLists.txt
PhysicalER/: CMakeLists.txt
PhysicalER/image_processing/: CMakeLists.txt
PhysicalER/python/: generate_mock_organ_list.py  pi_server.py  read_robot_infos.py
PhysicalER/src/: ER.cpp  controller.cpp  io_helpers.cpp  nn2_individual.cpp  pi_communication.cpp  pi_individual.cpp
RobotController/: .gitignore  BatteryMonitor.cpp  BatteryMonitor.hpp  BrainOrgan.cpp  BrainOrgan.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DaughterBoards.cpp  DaughterBoards.hpp  Fan.cpp  Fan.hpp  I2CBus.cpp  I2CBus.hpp  I2CDevice.cpp  I2CDevice.hpp  IMU.cpp  IMU.hpp  INA219_current_sensor.cpp  INA219_current_sensor.hpp  JointOrgan.cpp  JointOrgan.hpp  JointOrganTest  JointOrganTest.cpp  LedDriver.cpp  LedDriver.hpp  MPU6000.hpp  MotorOrgan.cpp  MotorOrgan.hpp  MotorOrganTest.cpp  Organ.cpp  Organ.hpp  README joint organ.txt  RobotTest.cpp  SensorOrgan.cpp  SensorOrgan.hpp  Sensors.cpp  Sensors.hpp  main.cpp  makefile  (+1 more)
WP4_Ecosytem_Manager/Cplusplus_Evolution/: .gitignore  CMakeLists.txt  Doxyfile  MultiPurposeLSystemV2.h  README.md  RandNum.cpp  VREPUI.cpp  VREPUI.h  makefile  makefile - Copy  mpiPlant_0.c  neatERPlugin.cpp  neatERPlugin.h  settings0.csv  v_repExtER.cpp  v_repExtER.h  v_repExtER.sln  v_repExtER.vcxproj  v_repExtER.vcxproj.filters  v_repExtER_NEAT.vcxproj.filters
WP4_Ecosytem_Manager/Raspberry/: CMakeLists.txt  SensorOrgan.cpp  SensorOrgan.hpp  Sensors.cpp  main.cpp
experiments/: CMakeLists.txt  README.md  typescript
experiments/are_generate_update/: CMakeLists.txt  factories.cpp  generateUpdate.cpp  generateUpdate.hpp  parameters.csv
experiments/bayesopt/: BO.cpp  BO.hpp  BOIndividual.cpp  BOIndividual.hpp  BOLoggings.hpp  BayesianOpt.cpp  BayesianOpt.hpp  CMakeLists.txt  bo_test.cpp  factories.cpp  parameters.csv
experiments/blackdrops/: BOIndividual.h  BlackDROPS.cpp  BlackDROPS.hpp  CMakeLists.txt  NEATGenome.cpp
experiments/bo_cmaes/: BOCMAES.cpp  BOCMAES.hpp  BOCMAESLoggings.cpp  factories.cpp
experiments/bodyplantesting/: BodyPlanTesting.cpp  BodyPlanTesting.h  CMakeLists.txt  CPPNIndividual.cpp  CPPNIndividual.h  ManLog.cpp  README.md  factories.cpp  parameters.csv
experiments/bodyplantesting_nn2/: .parameters.csv.swp  BodyPlanTesting.cpp  BodyPlanTesting.h  CMakeLists.txt  CPPNIndividual.cpp  CPPNIndividual.h  ManLog.cpp  ManLog.h  factories.cpp  parameters.csv
experiments/bodyplantesting_protomatrix/: BodyPlanTesting.cpp  BodyPlanTesting.h  CMakeLists.txt  CPPNIndividual.cpp  CPPNIndividual.h  ManLog.cpp  ProtomatrixGenome.cpp  ProtomatrixGenome.hpp  factories.cpp  parameters.csv
experiments/cmabo/: CMABO.cpp  CMABO.hpp  CMABOLoggings.cpp  CMakeLists.txt
experiments/cmaes/: CMAES.cpp  CMAES.hpp  CMAESIndividual.cpp  CMAESIndividual.hpp  CMAESLoggings.hpp  parameters.csv
experiments/common/: NNControl.cpp  NNControl.h  NNGenome.cpp  NNIndividual.cpp  NNIndividual.hpp  ProtomatrixGenome.hpp  barrelTask.cpp  barrelTask.hpp  crossbreeding.cpp  crossbreeding.hpp  env_settings.hpp  exploration.cpp  exploration.hpp  fixed_controller.cpp  fixed_controller.hpp  gradual_env.cpp  gradual_env.hpp  hill_climbing.cpp  hill_climbing.hpp  homeokinesis_controller.cpp  homeokinesis_controller.hpp  (+22 more)
image_processing/: CMakeLists.txt  Read me.txt  plot_trajectories.py
simulation/: .gitignore  CMakeLists.txt
(+2570 files in other folders)
