cmake_minimum_required(VERSION 3.0)
project(ER)
if (RASPBERRY)
    add_subdirectory(EAFramework)
    add_subdirectory(PhysicalER)
elseif(ONLY_PHYSICAL)
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(image_processing)
    add_subdirectory(PhysicalER)
    add_subdirectory(experiments)
else()
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(simulation)
    add_subdirectory(image_processing)
    add_subdirectory(PhysicalER)
    add_subdirectory(experiments)
endif()
