cmake_minimum_required(VERSION 3.0)
project(ARE)



add_compile_options("$<$<CONFIG:RELEASE>:-O3>")
#set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CTEST_MEMORYCHECK_SANITIZER_OPTIONS}")

#set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT RASPBERRY)
    set(RASPBERRY 0)
endif()

if(NOT ONLY_PHYSICAL)
    set(ONLY_PHYSICAL 0)
endif()

if(NOT ONLY_SIMULATION)
    set(ONLY_SIMULATION 0)
endif()

if (RASPBERRY)
    add_subdirectory(EAFramework)
    add_subdirectory(PhysicalER)
elseif(ONLY_PHYSICAL)
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(image_processing)
    add_subdirectory(PhysicalER)
    add_subdirectory(experiments)
    add_subdirectory(simulation)
elseif(ONLY_SIMULATION)
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(simulation)
    add_subdirectory(experiments)
else()
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(simulation)
    add_subdirectory(image_processing)
    add_subdirectory(PhysicalER)
    add_subdirectory(EcosystemManager)
    add_subdirectory(experiments)
endif()

if(NOT RASPBERRY)
    file(COPY are_sim.sh DESTINATION ${COPPELIASIM_FOLDER})
endif()
