cmake_minimum_required(VERSION 3.0)
project(ARE)

add_compile_options("$<$<CONFIG:RELEASE>:-O3>$<$<CONFIG:DEBUG>:-O0>")
add_compile_options("$<$<CONFIG:DEBUG>:-Wall>")
add_compile_options("$<$<CONFIG:RELEASE>:-DNDEBUG>")
add_compile_options("-rdynamic")

if(NOT RASPBERRY)
    set(RASPBERRY 0)
endif()

if(NOT ONLY_PHYSICAL)
    set(ONLY_PHYSICAL 0)
endif()

if(NOT ONLY_SIMULATION)
    set(ONLY_SIMULATION 0)
endif()

if (RASPBERRY)
    add_compile_definitions(ON_RASPBERRY)
    add_subdirectory(EAFramework)
    add_subdirectory(PhysicalER)
    add_subdirectory(RobotController)
    add_subdirectory(experiments)
elseif(ONLY_PHYSICAL)
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(image_processing)
    add_subdirectory(PhysicalER)
    add_subdirectory(experiments)
    add_subdirectory(simulation)
elseif(ONLY_SIMULATION)
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(simulation)
    add_subdirectory(experiments)
else()
    add_subdirectory(modules)
    add_subdirectory(EAFramework)
    add_subdirectory(simulation)
    add_subdirectory(image_processing)
    add_subdirectory(PhysicalER)
    add_subdirectory(experiments)
endif()

if(NOT RASPBERRY)
    if(COPPELIASIM_FOLDER)
       file(COPY are_sim.sh DESTINATION ${COPPELIASIM_FOLDER})
    elseif(VREP_FOLDER)
       file(COPY are_sim.sh DESTINATION ${VREP_FOLDER})
    endif()
endif()
