if(ONLY_PHYSICAL)
    if(VREP_FOUND)
        add_definitions(-DVREP)
    elseif(COPPELIASIM_FOUND)
        add_definitions(-DCOPPELIASIM)
    endif()

    if(WITH_NN2)
       add_subdirectory(physical_update)
       add_subdirectory(physical_melai)
       add_subdirectory(visualization)
    endif()
    add_subdirectory(test_are_generate)
elseif(ONLY_SIMULATION)
    if(VREP_FOUND)
        add_definitions(-DVREP)
    elseif(COPPELIASIM_FOUND)
        add_definitions(-DCOPPELIASIM)
    endif()

    #add_subdirectory(intrinsic_motivation)

    if(WITH_NN2)
        add_subdirectory(nipes)
        add_subdirectory(bodyplantesting_nn2)
        add_subdirectory(mnipes_v2)
        add_subdirectory(visualization)
        #add_subdirectory(robustness_test)
        add_subdirectory(nipes_multitarget)
        add_subdirectory(reevaluate_fixedmorphology)
    endif()
else()

    if(VREP_FOUND)
        add_definitions(-DVREP)
    elseif(COPPELIASIM_FOUND)
        add_definitions(-DCOPPELIASIM)
    endif()

    if(WITH_NN2)
        add_subdirectory(nipes)
        add_subdirectory(mnipes_v2)
        add_subdirectory(visualization)
        #add_subdirectory(robustness_test)
        add_subdirectory(nipes_multitarget)
        add_subdirectory(multitarget_test)
        add_subdirectory(physical_update)
        add_subdirectory(physical_melai)
    endif()
    add_subdirectory(test_are_generate)
endif()
install(DIRECTORY common DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" )
