if(ONLY_PHYSICAL)
    if(VREP_FOUND)
        add_definitions(-DVREP)
    elseif(COPPELIASIM_FOUND)
        add_definitions(-DCOPPELIASIM)
    endif()

    if(WITH_NN2)
       add_subdirectory(physical_update)
       add_subdirectory(physical_melai)
       add_subdirectory(visualization)
    endif()
    add_subdirectory(test_are_generate)
elseif(ONLY_SIMULATION)
    if(VREP_FOUND)
        add_definitions(-DVREP)
    elseif(COPPELIASIM_FOUND)
        add_definitions(-DCOPPELIASIM)
    endif()

    if(WITH_NN2)
       add_subdirectory(nipes)
       add_subdirectory(bodyplantesting_nn2)
       add_subdirectory(mnipes_v2)
       add_subdirectory(visualization)
    endif()
    add_subdirectory(meim)
    add_subdirectory(homeokinesis)
else()

    if(VREP_FOUND)
        add_definitions(-DVREP)
    elseif(COPPELIASIM_FOUND)
        add_definitions(-DCOPPELIASIM)
    endif()

    if(WITH_NN2)
        add_subdirectory(nipes)
        add_subdirectory(mnipes_v2)
        add_subdirectory(visualization)
        add_subdirectory(bodyplantesting_nn2)
    endif()
    add_subdirectory(meim)
    add_subdirectory(homeokinesis)

endif()
install(DIRECTORY common DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" )
