if(ONLY_PHYSICAL)
    add_definitions(-DCOPPELIASIM)

    if(WITH_NN2)
       add_subdirectory(physical_update)
       add_subdirectory(physical_melai)
       add_subdirectory(visualization)
    endif()
    add_subdirectory(test_are_generate)
elseif(ONLY_SIMULATION)

    add_definitions(-DCOPPELIASIM)

    if(WITH_NN2)
       # add_subdirectory(nipes)
       # add_subdirectory(morpho_exploration)
       # add_subdirectory(mnipes_v2)
       # add_subdirectory(visualization)
       add_subdirectory(visualization2)
    endif()
    add_subdirectory(meim)
    # add_subdirectory(meim_env_pressure)
    # add_subdirectory(homeokinesis)
else()
    add_definitions(-DCOPPELIASIM)
    if(WITH_NN2)
        # add_subdirectory(nipes)
        # add_subdirectory(mnipes_v2)
        # add_subdirectory(visualization)
        add_subdirectory(visualization2)
        # add_subdirectory(morpho_exploration)
    endif()
    add_subdirectory(meim)
    # add_subdirectory(meim_env_pressure)
    # add_subdirectory(homeokinesis)

endif()
install(DIRECTORY common DESTINATION include/ARE/experiments/ FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" )
